[package]
name = "terryc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
clap = { version = "3", features = ["derive"] }
salsa = "0.16.1"
terryc_base = { path = "./base" }
terryc_hir = { path = "./hir" }
terryc_ast = { path = "./ast" }
terryc_lex = { path = "./lex" }
terryc_mir = { path = "./mir" }
terryc_codegen = { path = "./codegen" }